frontend/src/styles/pages/AddTransaction.css
.amount-row {
    display: flex;
    background-color: var(--input);
    border-radius: 14px;
    height: 46px;
    align-items: center;
}

.amount-row input {
    width: 100%;
    border: none;
    background: none;
    font-size: 14px;
    color: var(--text-primary);
    padding: 0 15px;
    outline: none;
}

.amount-row .select-wrapper select {
    background: none;
    border: none;
    padding: 0 20px 0 8px;
    outline: none;
}

.amount-row .form-field:first-child {
    flex: 2;
}

.amount-row .form-field:last-child {
    flex: 1;
}

.add-transaction-content {
    margin: 7%;
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding-bottom: 60px;
}

.form-field input, select {
    border: none;
    background: none;
}

.input-label {
    font-size: 13px;
    margin: 0;
}

.amount-input {
    display: flex;
    flex-direction: column;
    gap: 7px;
}

